--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <h1>🍋 Lemon4.exe</h1>
   <p class="info">
-    Lemon4 is a joke that spams your screan use alt+f1 to stop it.<br>
+    Lemon4 is a joke that spams your screen use alt+f1 to stop it.<br>
     Click the button below to download the latest version.
   </p>
  <a class="btn" href="Lemon4.exe.zip" class="download-btn" download>⬇ 🍋 Lemon4.exe Download </a>
