--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <p class="info">
     Lemon4 is a joke that spams your screen use alt+f1 to stop it.<br>
     Click the button below to download the latest version.
+    legal purpose DO NOT USE ON SOMEONE ELSES PERSONAL DEVICE 
+    this is not malware for more details ask lemoncookie1028
   </p>
  <a class="btn" href="Lemon4.exe.zip" class="download-btn" download>⬇ 🍋 Lemon4.exe Download </a>
 
